@@ -6,7 +6,7 @@
  *
  *   Updated:	2001-06-11
  *
- *   $Id: qtreemap.h,v 1.6 2001/07/11 02:16:03 alexannika Exp $
+ *   $Id: qtreemap.h,v 1.7 2001/07/11 19:54:49 alexannika Exp $
  *
  */
 
@@ -75,6 +75,8 @@ namespace KDirStat
 #define PM_HIERARCH4_CUSHION 14
 #define PM_HIERARCH5_CUSHION 15
 #define PM_HIERARCH_TEST_CUSHION 16
+#define PM_HIERARCH_PYRAMID 17
+#define PM_HIERARCH_DIST_PYRAMID 18
 
   // draw modes
 
@@ -237,7 +239,7 @@ public:
   float worst_aspect(ObjList *sorted_list,int i1,int i2,int width);
   //int sum_list(ObjList *slist,int i1,int i2);
   void printList(ObjList *slist,int i1,int i2);
-  int sum_list(ObjList *slist,int i1,int i2,bool print_it=FALSE);
+  float sum_list(ObjList *slist,int i1,int i2,bool print_it=FALSE);
 
   QColor& getBaseColor(QString name);
 
